--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,11 @@
     <string name="txtTelaFiltroTipoImovel">Que tipo de imóvel você procura?</string>
     <string name="txtTelaFiltroComodos">Selecione o número de cômodos desejado</string>
     <string name="txtTelaFiltroFaixaPreco">Selecione a faixa de preço</string>
+    <string name="txtTelaCadastro">Cadastre-se</string>
+
+    <string name="hintNome">Nome</string>
+    <string name="hintSobrenome">Sobrenome</string>
+    <string name="hintRepeteSenha">Repita a Senha</string>
 
     <string name="edtEmail">E-mail</string>
     <string name="edtSenha">Senha</string>
@@ -20,6 +25,9 @@
     <string name="btnIngles">Inglês</string>
     <string name="btnEspanhol">Espanhol</string>
     <string name="btnFrances">Francês</string>
+    <string name="btnConfirmaCadastro">Cadastrar!</string>
+
+    <string name="toastSenhaDiferente">As senhas devem ser iguais.</string>
 
     <string-array name="listaIdiomas">
         <item>Português</item>
