--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -51,4 +51,5 @@
         <item>05</item>
     </string-array>
     <string name="toastSenhaDiferente">Passwords don\'t match</string>
+    <string name="txtTelaFiltroArea">Select the desired area</string>
 </resources>
